@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Sys-SigAction
-version:            0.15
+version:            0.16
 abstract:           Perl extension for Consistent Signal Handling
 author:
     - Lincoln A. Baxter <lab-at-lincolnbaxter-dot-com>
@@ -17,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
